tests-integration/tests/roundtrip/invalid/semantic/typecheck/matrix_in_set_expr/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/matrix_in_set_expr/input.essence:3:20:
  |
3 | such that s supset s2
  |                    ^^
Type error:
	Expected: "Set MSet funcition or relation"
	Got: matrix indexed by [int] of int

